# prl

./: .clang-format  .gitignore  CMakeLists.txt  Makefile 1.am  Makefile.am  README  autogen.sh  configure.ac  correlation.ppcg_opencl.c  correlation.ppcg_opencl_kernel.cl
include/: Makefile.am  pencil.h  pencil_compat.h  pencil_lib.h  pencil_opencl.h  pencil_prototypes.h  prl.h  prl_mem.h  prl_opencl.h  prl_pencil.h  prl_perf.h  prl_scop.h
runtime/: Makefile  Makefile.am  README  pencil_runtime.h
runtime/include/: Makefile.am  prl.h
runtime/opencl/: pencil_runtime.c
runtime/opencl-opt/: pencil_runtime.c
runtime/opencl-opt/impl/: impl.h  pencil_runtime_impl.cpp
runtime/src/: Makefile.am  ocl_utilities.h  pencil_int.h  prl.c  prl_impl.cpp  prl_impl.h
src/: CMakeLists.txt  Makefile.am  prl.c  prl_impl.cpp  prl_opencl.c
